add spell card and input form

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@ Learn how to configure a non-root public URL by running `npm run build`.
 -->
 <title>Spell Portal</title>
 <meta name="title" content="Wave Portal" />
-<meta name="description" content="I want to meet you! Send me a wave now!" />
+<meta name="description" content="Let's manifest together, open a portal and send your spell through the Zuvuya!" />
 
 <!-- Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://buildspace.so/">
 <meta property="og:title" content="Spell Portal">
-<meta property="og:description" content="I want to meet you! Open a Portal and Send me a Spell now!">
+<meta property="og:description" content="Let's manifest together, open a portal and send your spell through the Zuvuya!">
 <meta property="og:image" content="https://s3.amazonaws.com/cdn.buildspace.so/courses/ethereum-smart-contracts/metadata.png">
 
 <!-- Twitter -->
